--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,14 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  padding: 0;
+  margin: 0;
+  background-color: whitesmoke;
+}
+
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -13,4 +23,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
+} */
